--- a/src/assets/image/test.html
+++ b/src/assets/image/test.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="../../assets/image/React/1.png" alt="">
+    <img src="./React/1.png" alt="">
 </body>
 </html>
